manifests/03-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: arena-store
  namespace: incident-arena-04
spec:
  serviceName: arena-store
  replicas: 1
  selector:
    matchLabels:
      app: arena-store
  template:
    metadata:
      labels:
        app: arena-store
        component: stateful-web
    spec:
      containers:
        - name: web
          image: nginx:1.27-alpine
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 3
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 96Mi
          volumeMounts:
            - name: data
              mountPath: /usr/share/nginx/html
      volumes:
        - name: content
          configMap:
            name: arena-store-content
            items:
              - key: index.htlm
                path: index.html
        - name: data
          persistentVolumeClaim:
            claimName: arena-store-dtaa
