manifests/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arena-api-service
  namespace: incident-arena-03-app
spec:
  selector:
    app: arena-service
  ports:
    - name: http
      port: 80
      targetPort: http
