manifests/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arena-api
  namespace: incident-arena-03-app
spec:
  ingressClassName: traefik
  rules:
    - host: arena03.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arena-api-service
                port:
                  name: http
